--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#files
+/server/files/original
+/server/files/thumb
+/server/node_modules
+
 # dependencies
 /node_modules
 /.pnp
